# ECE420-Final-project

./: LICENSE  README.md
ECE420_parametric_eq/: gradle.properties  settings.gradle
ECE420_parametric_eq/app/: build.gradle
ECE420_parametric_eq/app/src/main/: AndroidManifest.xml
ECE420_parametric_eq/app/src/main/assets/: bk.csv  thx.csv
ECE420_parametric_eq/app/src/main/cpp/: CMakeLists.txt  dsp_native.cpp  dsp_native.h
ECE420_parametric_eq/app/src/main/cpp/kiss_fft/test/: benchkiss.c  doit.c  test_real.c  twotonetest.c
ECE420_parametric_eq/app/src/main/cpp/kiss_fft/tools/: kiss_fftndr.h  psdpng.c
ECE420_parametric_eq/app/src/main/java/com/ece420_parametric_eq/: DSPProcessor.java  DataStore.java  EqActivity.java  ParametricEQUtils.java  ProcessActivity.java  start_page.java
ECE420_parametric_eq/app/src/main/java/com/ece420_parametric_eq/models/: AnalysisResult.java  AutoEQResult.java  PEQBand.java
ECE420_parametric_eq/app/src/main/python/: autoeq_helper.py  test.py
ECE420_parametric_eq/app/src/main/res/layout/: activity_eq.xml  activity_process.xml  activity_process_2.xml  start_page.xml
ECE420_parametric_eq/app/src/main/res/values/: strings.xml  themes.xml
ECE420_parametric_eq/app/src/main/res/values-night/: themes.xml
ECE420_parametric_eq/gradle/: libs.versions.toml
ECE420_parametric_eq/gradle/wrapper/: gradle-wrapper.properties
